--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
 
  
    My Muskan My Jaan, My happiness is you. You are my priority. You are the moon of my Life's environment. <br>
-I am heartfelt sorry,My J
-      aan....<br>
+I am heartfelt sorry,My Jaan....<br>
 your amazing smile makes my heart beat faster. 
 I look into your magnificent eyes and float there.<br>
 I am sorry my Moon..<br>
